<resources>
    <string name="app_name">Feed Your Cat</string>
    <string name="tab_label_feed">Feed</string>
    <string name="tab_label_cats">Cats</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_name">Name</string>
    <string name="sort_newest">Newest</string>
    <string name="sort_latest">Latest</string>
    <string name="add_cat_title">Cat</string>
    <string name="add_feed_title">Feed</string>
    <string name="text_save">Save</string>
    <string name="text_update">Update</string>
    <string name="text_delete">Delete</string>
    <string name="action_menu_edit">Action Edit</string>
    <string name="message_success_add_data">Success save data</string>
    <string name="message_success_update_data">Success update data</string>
    <string name="message_fail_add_data">Fail save data</string>
    <string name="message_fail_update_data">Fail update data</string>
    <string name="message_delete_data">Are you sure you want to delete the data?</string>
    <string name="message_exit">Are you sure you want to exit from this page?</string>
    <string name="message_cancel_edit">Are you sure you want to cancel edit data?</string>
    <string name="message_name_error">Cat name can\'t be empty</string>
    <string name="message_birth_date_error">Cat birth date can\'t be null</string>
    <string name="message_image_error">Cat image can\'t be null</string>
    <string name="message_empty_data">Data is empty!</string>
    <string name="message_choose_cat">Please choose a cat!</string>
    <string name="message_time_empty">Feed time can\'t be null</string>
    <string name="message_success_save_feed">Success to add feed cat!</string>
    <string name="message_success_delete">%d data get deleted!</string>
    <string name="message_failed_save_feed">Failed to add feed cat!</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="birth_format">%d/%d/%d</string>
    <string name="hint_cat_name">cat name</string>
    <string name="hint_cat_birthdate">cat birthdate</string>
    <string name="label_list_cats">Cats</string>
    <string name="label_feed_time">Feed time</string>
    <string name="label_time">Time</string>
    <string name="label_add">Add</string>
    <string name="label_submit">submit</string>
    <string name="action_delete">Delete</string>
    <string name="action_selected">%d selected</string>
    <string name="notification_title">@string/app_name</string>
    <string name="notification_message">%s needs food!</string>

    <string name="cd_button_add">Button add</string>
    <string name="cd_image">Image</string>
</resources>