<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetStartWithNavigation="0dp"
            app:menu="@menu/menu_add_cat"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/add_cat_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <ImageView
        android:id="@+id/image_cat"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/green_light_secondary"
        android:contentDescription="@string/cd_image" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <EditText
        android:id="@+id/input_cat_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/hint_cat_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="4dp" />

    <Button
        android:id="@+id/button_birth_date"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/hint_cat_birthdate"
        android:textAllCaps="false" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <Button
        android:id="@+id/button_upsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/text_save" />

    <Button
        android:id="@+id/button_delete"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/text_delete"
        android:visibility="gone" />

</LinearLayout>