<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sort"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableEnd="@drawable/ic_sort"
        android:text="@string/sort_newest"
        android:textAllCaps="false"
        app:drawableTint="@color/orange_primary"
        app:strokeColor="@color/orange_primary" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="4dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/item_cat" />

        <TextView
            android:id="@+id/text_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/message_empty_data"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="gone"
            app:drawableTopCompat="@drawable/ic_empty_cats"
            app:fontFamily="@font/poppins_bold" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:contentDescription="@string/cd_button_add"
            android:src="@drawable/ic_add" />

    </FrameLayout>

</LinearLayout>